# pyconf2026_multi-stack-debug-mastery

./: .gitignore  README.md  multi-stack-debug-mastery.html  pitch.md  presentation-content.json  skills-lock.json  vercel.json
.agents/skills/presentation-generator/scripts/: generate-presentation.js
.github/workflows/: vercel.yml
audient-backend/: README.md  main.py  pyproject.toml
audient-backend/tests/: test_main.py
audient-frontend/: README.md  package-lock.json  vite.config.js
configs/: launch.json  tasks.json
configs/compound/: launch.json
configs/frontend/: launch.json
configs/python/: launch.json
demos/: order_processor.py  user_manager.js
docs/: part-1-modern-python-env.md  part-2-tasks.md  part-3-remote-attach.md  part-4-one-click-workflow.md  tasks-guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/electron/: main.cjs
frontend/src/: App.jsx  main.js  style.css
frontend/src/components/: Header.jsx  HealthCheck.jsx  ItemsList.jsx
